--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             Kerja</a>
           <a href="#cta" onclick="closeMobileMenu()"
             class="px-4 py-3 rounded-xl text-sm font-semibold text-slate-600 hover:bg-primary-50 hover:text-primary-600 transition-colors">Kontak</a>
-          <a href="#cta" onclick="closeMobileMenu()"
+          <a href="https://wa.me/6282164599911" onclick="closeMobileMenu()"
             class="mt-2 mx-4 btn-primary text-white text-sm font-bold px-5 py-3 rounded-full text-center">Hubungi
             Kami</a>
         </div>
@@ -201,7 +201,7 @@
               class="btn-primary text-white font-bold text-sm px-7 py-3.5 rounded-full shadow-lg shadow-primary-500/25">
               Lihat Prototype ↓
             </a>
-            <a href="#cta"
+            <a href="https://wa.me/6282164599911"
               class="bg-white border-2 border-slate-200 hover:border-primary-400 hover:text-primary-600 text-dark font-bold text-sm px-7 py-3.5 rounded-full transition-all">
               Hubungi Kami
             </a>
